--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,17 +2,22 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
-
     runs-on: self-hosted
 
+    env:
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+      POSTGRES_PW: ${{ secrets.POSTGRES_PW }}
+      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+      PGADMIN_MAIL: ${{ secrets.PGADMIN_MAIL }}
+      PGADMIN_PW: ${{ secrets.PGADMIN_PW }}
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: sudo docker-compose -p pg up --build -d
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: sudo docker-compose -p pg up --build -d
