--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,13 +9,19 @@ on:
 jobs:
   build:
     runs-on: self-hosted
+
+    env:
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PW }}
+      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+      PGADMIN_MAIL: ${{ secrets.PGADMIN_MAIL }}
+      PGADMIN_PW: ${{ secrets.PGADMIN_PW }}
+
     steps:
       - uses: actions/checkout@v3
-      - run: |
-          sudo docker-compose -p pg up --build -d
-        env:
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PW: ${{ secrets.POSTGRES_PW }}
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          PGADMIN_MAIL: ${{ secrets.PGADMIN_MAIL }}
-          PGADMIN_PW: ${{ secrets.PGADMIN_PW }}
+
+      - name: compsoe up
+        run: sudo docker-compose -p pg up --build -d
+
+      - name: log
+        run: sudo docker logs postgres
