--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: compsoe up
-        run: sudo docker-compose -p pg up --build -d
+        run: sudo docker-compose -p pg up --build -d -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PW }}
 
       - name: log
         run: sudo docker logs postgres
