--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,8 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PW}
+      POSTGRES_USER: ${env.POSTGRES_USER}
+      POSTGRES_PASSWORD: ${env.POSTGRES_PW}
     volumes:
       - pgdata:/var/lib/postgresql/data
   pgadmin:
@@ -17,8 +17,8 @@ services:
     ports:
       - "5050:80"
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_MAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PW}
+      PGADMIN_DEFAULT_EMAIL: ${env.PGADMIN_MAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${env.PGADMIN_PW}
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
